updated json app

--- a/app.json
+++ b/app.json
@@ -1,41 +1,1 @@
-{
-	"version":"1.0",
-	"bibleVersions": [
-  {
-    "name": "King James Version",
-    "code": "kjv",
-    "localUrl": "",
-    "imageUrl": ""
-  },
-  {
-    "name": "Amplified Version",
-    "code": "amp",
-    "localUrl": "",
-    "imageUrl": ""
-  },
-  {
-    "name": "New King James Version",
-    "code": "kjv",
-    "localUrl": "",
-    "imageUrl": ""
-  },
-  {
-    "name": "Bible in Basic English",
-    "code": "bbe",
-    "localUrl": "",
-    "imageUrl": ""
-  },
-  {
-    "name": "American Standard Version",
-    "code": "asv",
-    "localUrl": "",
-    "imageUrl": ""
-  },
-  {
-    "name": "American King James Version",
-    "code": "akjv",
-    "localUrl": "",
-    "imageUrl": ""
-  }
-]
-}
+{"version":"1.0","bibleVersions":[{"name":"King James Version","code":"kjv","localUrl":"","imageUrl":""},{"name":"Amplified Version","code":"amp","localUrl":"","imageUrl":""},{"name":"New King James Version","code":"nkjv","localUrl":"","imageUrl":""},{"name":"Bible in Basic English","code":"bbe","localUrl":"","imageUrl":""},{"name":"American Standard Version","code":"asv","localUrl":"","imageUrl":""},{"name":"American King James Version","code":"akjv","localUrl":"","imageUrl":""},{"name":"New American Standard Bible","code":"nasb","localUrl":"","imageUrl":""},{"name":"New International Version","code":"niv","localUrl":"","imageUrl":""},{"name":"Revised Standard Version","code":"niv","localUrl":"","imageUrl":""}]}
